# the-photo-app

./: .gitignore  README.md  pyproject.toml
src/the_photo_app/: __init__.py  __main__.py
src/the_photo_app/api/: __init__.py  server.py
src/the_photo_app/db/: schema.py
src/the_photo_app/indexing/: faiss_manager.py
src/the_photo_app/models/: model_manager.py
src/the_photo_app/query/: __init__.py
src/the_photo_app/ui/: __init__.py  app.py
src/the_photo_app/utils/: normalization.py
the_photo_app/: __init__.py  config.py
the_photo_app/api/: server.py
the_photo_app/indexing/: __init__.py  indexer.py  thumbnail_gen.py
the_photo_app/models/: __init__.py  embeddings.py  face.py
the_photo_app/query/: search.py
the_photo_app/utils/: __init__.py  hash.py  image.py
